fix: More strict css, less easy for it to be overridden. Fixes opening hours wrapping on long pickup location titles and close modal button not being clickable.

--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -1,18 +1,17 @@
-.#{$classBase} {
-  &__modal {
+.#{$classBase}__modal {
+  padding: $modal-content-padding;
+  background-color: white;
+
+  &__close {
+    z-index: 100;
+    position: absolute;
+    top: 0;
+    right: 0;
     padding: $modal-content-padding;
-    background-color: white;
 
-    &__close {
-      position: absolute;
-      top: 0;
-      right: 0;
-      padding: $modal-content-padding;
-
-      img {
-        width: 1em;
-        cursor: pointer;
-      }
+    img {
+      width: 1em;
+      cursor: pointer;
     }
   }
 }
