--- a/src/assets/scss/_table.scss
+++ b/src/assets/scss/_table.scss
@@ -1,4 +1,4 @@
-.#{$classBase} table {
+table.#{$classBase}__table {
   margin: 0;
   width: 100%;
 
